# Intrusion-Detection-in-Cloud-Networks-by-Autoencoders

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTEBOOK_OPTIMIZATION_SUMMARY.md  README.md  SECURITY.md  autoencoder_performance_results.csv  comprehensive_test.py  demo_refactored_modules.py  deployment_readiness_test.py  detection_by_Autoencoders.ipynb  docker-compose.development.yml  docker-compose.yml  final_system_test.py  pyproject.toml  pytest.ini  quick_final_test.py  quick_test.py  requirements-core.txt  requirements-dev.txt  requirements.txt  setup.py  step3_summary.py  test_config_management.py  test_config_utils.py  test_constants.py  test_final_imports.py  test_imports_fix.py  test_imports_step_by_step.py  test_isolated_config.py  test_minimal.py  test_simple_config.py  test_src_import.py  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  deploy.yml  security.yml
artifacts/: .gitkeep
assets/: .gitkeep
benchmarks/: .gitkeep
config/: api_config.yaml  base.yaml  production.yaml  staging.yaml  testing.yaml  train_config.yaml
dataset/: .gitkeep
dataset/processed/: .gitkeep
dataset/raw/: .gitkeep
docs/: CONFIG_SUMMARY.md  DIRECTORY_STRUCTURE.md  ENTERPRISE_CONFIG_GUIDE.md  ENTERPRISE_STRUCTURE_SUMMARY.md  ERROR_FIX_SUMMARY.md  GITHUB_UPDATE_SUMMARY.md  IMPORT_FIX_SUMMARY.md  MODULARIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  STEP1_REFACTORING_COMPLETE.md  STEP2_TESTING_COMPLETE.md  STEP3_CONFIGURATION_COMPLETE.md
environments/: .gitkeep
examples/: .gitkeep  basic_usage.py
k8s/: deployment.yaml  ingress-hpa.yaml  namespace-config.yaml
logs/: .gitkeep
logs/inference/: .gitkeep
logs/monitoring/: .gitkeep
logs/training/: .gitkeep
models/: .gitkeep  production_autoencoder.pkl
models/checkpoints/: .gitkeep
monitoring/: alert_rules.yml  prometheus.yml
reports/: .gitkeep
scripts/: config_cli.py  deploy.sh  train.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  enhanced_trainer.py  evaluator.py  predictor.py  trainer.py
src/data/: __init__.py  loader.py  preprocessor.py  processor.py
src/models/: __init__.py  autoencoder.py
src/utils/: __init__.py  advanced_config.py  api_utils.py  config.py  config_manager.py  config_utils.py  config_validation.py  config_validator.py  constants.py  data_utils.py  enterprise_config.py  logger.py  metrics_utils.py  model_utils.py  simple_config.py
tests/: .gitkeep  conftest.py
tests/fixtures/: .gitkeep
tests/integration/: .gitkeep  test_complete_workflow.py  test_complete_workflow_enhanced.py
tests/unit/: .gitkeep  test_data_loader.py  test_data_loader_enhanced.py  test_data_preprocessor.py  test_data_preprocessor_enhanced.py  test_enhanced_trainer.py  test_enhanced_trainer_comprehensive.py  test_model_evaluator.py  test_model_evaluator_comprehensive.py  test_utils_comprehensive.py
tools/: .gitkeep  performance_profiling.py
